--- a/css/site.css
+++ b/css/site.css
@@ -44,6 +44,10 @@ form button{
     margin-left: 50%
 }
 
+.message{
+    font-style: italic;
+}
+
 @media only screen and (max-width: 550px){
     form label{
         text-align: left;
